my-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
  - name: http
    port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment-version-a
spec:
  selector:
    matchLabels:
      version: version-a
  template:
    metadata:
      labels:
        app: my-app
        version: version-a
    spec:
      containers:
      - image: eightycolumns/my-app:version-a
        imagePullPolicy: IfNotPresent
        name: my-app
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment-version-b
spec:
  selector:
    matchLabels:
      version: version-b
  template:
    metadata:
      labels:
        app: my-app
        version: version-b
    spec:
      containers:
      - image: eightycolumns/my-app:version-b
        imagePullPolicy: IfNotPresent
        name: my-app
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-app-destination-rule
spec:
  host: my-app-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: version-a
    labels:
      version: version-a
  - name: version-b
    labels:
      version: version-b
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-app-gateway
  http:
  - route:
    - destination:
        host: my-app-service
        port:
          number: 8080
        subset: version-a
      weight: 100
    - destination:
        host: my-app-service
        port:
          number: 8080
        subset: version-b
      weight: 0
